<resources>
    <string name="app_name">MiVentanaLogin</string>
    <string name="title_activity_vregistro">Vregistro</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Guardar</string>
    <string name="nombre">nombre</string>
    <string name="telefono">telefono</string>
    <string name="email">email</string>
    <string name="contra">contraseña</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>